Fix right arrow placement on mobile

--- a/mnd/static/css/style.css
+++ b/mnd/static/css/style.css
@@ -922,7 +922,7 @@ a.reference {
     }
 
     .arrow-right {
-        left: 100vw;
+        left: 93vw;
     }
 
 }
